--- a/clients/build.gradle
+++ b/clients/build.gradle
@@ -23,7 +23,8 @@ dependencies {
         exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
     }
 // https://mvnrepository.com/artifact/com.fasterxml.jackson.module/jackson-module-kotlin
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.7'
+    //compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.7'
+    compile "$corda_release_group:corda-jackson:$corda_release_version"
 
     compile "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
     compile "org.apache.logging.log4j:log4j-web:${log4j_version}"
